<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <parent>
        <groupId>com.eischet.root</groupId>
        <artifactId>lib-public</artifactId>
        <version>1.0.13-SNAPSHOT</version>
    </parent>

    <groupId>com.eischet.janitor</groupId>
    <artifactId>janitor-project</artifactId>
    <version>${revision}</version>

    <name>Janitor</name>
    <description>A simple scripting language for the JVM.</description>
    <url>https://github.com/eischet/janitor</url>

    <properties>
        <!-- project revision -->
        <revision>0.9.57-SNAPSHOT</revision>

        <!-- project settings -->
        <maven.plugin.validation>VERBOSE</maven.plugin.validation>

        <!-- dependency versions -->
        <deps.autoservice>1.1.1</deps.autoservice>
        <deps.jansi-and-jline>4.1.0</deps.jansi-and-jline>

        <maven.compiler.release>21</maven.compiler.release>

    </properties>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Stefan Eischet</name>
            <email>stefan@eischet.net</email>
            <organization>Eischet Software e.K.</organization>
            <organizationUrl>https://www.eischet.com/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/eischet/janitor.git</connection>
        <developerConnection>scm:git:ssh://github.com:eischet/janitor.git</developerConnection>
        <url>https://github.com/eischet/janitor/tree/main</url>
    </scm>

    <modules>
        <module>janitor-toolbox</module>
        <module>janitor-api</module>
        <module>janitor-lang</module>
        <module>janitor-demo</module>
        <module>janitor-jsr223</module>
        <module>janitor-maven-plugin</module>
        <module>janitor-repl</module>
        <module>janitor-logging</module>
        <module>janitor-dbxs</module>
        <module>janitor-orm</module>
        <module>janitor-generator</module>
        <module>janitor-tests</module>
        <module>janitor-modules</module>
        <module>janitor-modules-common</module>
        <module>janitor-modules/commonmark</module>
    </modules>


    <build>
        <pluginManagement>
            <!-- lock down plugins versions -->
            <plugins>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_maven-plugin_packaging -->
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-plugin-plugin</artifactId>
                    <version>3.15.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.5</version>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>
                <plugin>
                    <artifactId>maven-invoker-plugin</artifactId>
                    <version>3.10.1</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.12.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <configuration>
                            <excludePackageNames>com.eischet.janitor.lang</excludePackageNames>
                            <!--
                                while we should strive for complete JavaDoc, some classes simply do not have it, like the
                                generated code from ANTLR, and there is simply no point in copying @Override methods'
                                JavaDoc from the interface to the implementing class everywhere.
                            -->
                            <doclint>all,-missing</doclint>
                        </configuration>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.8</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <configuration>
                            <skip>false</skip>
                            <bestPractices>true</bestPractices>
                        </configuration>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.5</version>
            </plugin>

        </plugins>
    </build>


    <dependencyManagement>
        <dependencies>
            <!-- as suggessted by https://github.com/junit-team/junit-examples/blob/main/junit-jupiter-starter-maven/pom.xml -->
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>6.1.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.eischet.janitor</groupId>
                <artifactId>janitor-api</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.eischet.janitor</groupId>
                <artifactId>janitor-dbxs</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.eischet.janitor</groupId>
                <artifactId>janitor-logging</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.eischet.janitor</groupId>
                <artifactId>janitor-lang</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.eischet.janitor</groupId>
                <artifactId>janitor-toolbox</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.eischet.janitor</groupId>
                <artifactId>janitor-orm</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.eischet.janitor</groupId>
                <artifactId>janitor-generator</artifactId>
                <version>${revision}</version>
            </dependency>

            <!-- most modules are included in janitor-modules-common -->
            <dependency>
                <groupId>com.eischet.janitor</groupId>
                <artifactId>janitor-modules-common</artifactId>
                <version>${revision}</version>
            </dependency>

            <!-- these modules are not included in janitor-modules-common -->
            <dependency>
                <groupId>com.eischet.janitor.modules</groupId>
                <artifactId>commonmark</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.eischet.janitor.modules</groupId>
                <artifactId>mustang</artifactId>
                <version>${revision}</version>
            </dependency>


            <!-- external dependencies -->
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.14.0</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${deps.slf4j}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-jdk14</artifactId>
                <version>${deps.slf4j}</version>
            </dependency>
            <dependency>
                <groupId>com.google.auto.service</groupId>
                <artifactId>auto-service-annotations</artifactId>
                <version>${deps.autoservice}</version>
            </dependency>
            <dependency>
                <groupId>org.jline</groupId>
                <artifactId>jline</artifactId>
                <version>${deps.jansi-and-jline}</version>
            </dependency>
            <dependency>
                <groupId>org.jline</groupId>
                <artifactId>jansi</artifactId>
                <version>${deps.jansi-and-jline}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>2.21.3</version>
            </dependency>


        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>deploy-internal</id>
            <distributionManagement>
                <repository>
                    <id>repo-eischet-releases</id>
                    <name>Eischet Software Repository</name>
                    <url>https://repo.srv.eischet.net/releases</url>
                    <snapshots>
                        <enabled>false</enabled>
                    </snapshots>
                </repository>
                <snapshotRepository>
                    <id>repo-eischet-snapshots</id>
                    <name>Eischet Software Repository</name>
                    <url>https://repo.srv.eischet.net/snapshots</url>
                    <snapshots>
                        <enabled>true</enabled>
                    </snapshots>
                </snapshotRepository>
            </distributionManagement>
        </profile>
    </profiles>


</project>